# adopcion-de-animales

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
refugio/: settings.py  urls.py
refugio/adopcion/: apps.py
refugio/apps/adopcion/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
refugio/apps/adopcion/migrations/: 0001_initial.py  0002_solicitud.py
refugio/apps/mascota/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
refugio/apps/mascota/migrations/: 0001_initial.py  0002_alter_mascota_comentarios.py
refugio/apps/usuario/: apps.py  forms.py  urls.py  views.py
refugio/mascota/: apps.py
static/css/: estilos.css
templates/: index.html
templates/adopcion/: solicitud_delete.html  solicitud_form.html  solicitud_list.html
templates/base/: footer.html  header-before-login.html  header.html  home.html
templates/mascota/: mascota.html  mascota_delete.html  mascota_form.html  mascota_list.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
templates/usuario/: registrar.html
