[tool.poetry]
name = "adopcion-de-animales"
version = "0.1.0"
description = ""
authors = ["alfonso <@lfareiza1989>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
psycopg2 = "^2.8.6"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
